syntax = "proto3";

package analytics;

option go_package = "go-grpc-backend/proto";

import "google/protobuf/timestamp.proto";
import "category_score.proto";
import "ticket_score.proto";
import "overall_quality_score.proto";
import "period_over_period.proto";

message RatingCategory {
  int32 id = 1;
  string name = 2;
  int32 weight = 3;
}

message CategoryScore {
  int32 category_id = 1;
  string category_name = 2;
  double score = 3;
  int32 rating_count = 4;
  google.protobuf.Timestamp date = 5;
}

message DailyAggregatedScoresResponse {
  repeated CategoryScore scores = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message WeeklyAggregatedScoresResponse {
  repeated CategoryScore scores = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}



message AggregatedCategoryScoresRequest {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
}

message ScoresByTicketRequest {
  google.protobuf.Timestamp start_date = 1;
  google.protobuf.Timestamp end_date = 2;
}


service AnalyticsService {
  rpc GetAggregatedCategoryScores(AggregatedCategoryScoresRequest) returns (AggregatedCategoryScoresResponse);
  rpc GetScoresByTicket(ScoresByTicketRequest) returns (ScoresByTicketResponse);
  rpc GetOverallQualityScore(OverallQualityScoreRequest) returns (OverallQualityScoreResponse);
  rpc GetPeriodOverPeriodChange(PeriodOverPeriodChangeRequest) returns (PeriodOverPeriodChangeResponse);
}
